# IDP-Platform

./: Idp_IDP_Platform_architecture.docx  README-MASTER.md  cleanup-service 2.sh  idp_devportal_v3_complete.html  readme.MD  start-poc.sh  zayo_devportal_v3_complete.html
backstage/: .gitlab-ci.yml  app-config.production.yaml  app-config.yaml  catalog-info.yaml
devportal/: .gitlab-ci.yml  catalog-info.yaml  index.html  package-lock.json  package.json  preflight-curl-1.tfvars  vite.config.js
idp-platform-ai/: .gitlab-ci.yml  Dockerfile  README.md  argocd-app.yaml  catalog-info.yaml  eksctl-cluster.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
platform/: README.md
spring-orders-poc/: .gitlab-ci.yml  Dockerfile  README.md  catalog-info.yaml  pom.xml  (+1 more)
zayo-platform-ai/: .gitlab-ci.yml  Dockerfile  README.md  argocd-app.yaml  catalog-info.yaml  eksctl-cluster.yaml  pyproject.toml
zayo-platform-ai/app/: __init__.py  config.py  main.py
zayo-platform-ai/app/models/: schemas.py
zayo-platform-ai/app/routers/: analyze.py  chat.py  databridge.py  health.py
zayo-platform-ai/app/services/: claude_client.py  context_builder.py  datadog_client.py  eks_client.py  gitlab_client.py  prompt_registry.py
zayo-platform-ai/docs/: aws-oidc-setup.md  live-integration.md
zayo-platform-ai/helm/: Chart.yaml  values-prod.yaml
zayo-platform-ai/helm/templates/: deployment.yaml
zayo-platform-ai/pipeline-templates/: golden-pipeline-python.gitlab-ci.yml
zayo-platform-ai/terraform/: main.tf
zayo-platform-ai/tests/: conftest.py  test_databridge.py
(+84 files in other folders)
