[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zayo-platform-ai"
version = "1.0.0"
description = "Zayo Platform AI service — powers the DevPortal AI Copilot"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/tests/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "*.egg-info"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]   # assert is fine in test code
